[package]
name = "ensembles-rs"
version = "0.1.0"
authors = ["Miguel Chan <vvchan@outlook.com>"]
edition = "2018"

[dependencies]
rayon = "1.0.3"
rand = "0.6.5"
csv = "1.0.7"
indicatif = "0.11.0"
ndarray = { version = "0.12.1", features = ["blas"] }
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
