[package]
name = "ensembles-rs"
version = "0.1.0"
authors = ["Miguel Chan <vvchan@outlook.com>"]
edition = "2018"

[dependencies]
rayon = "1.0.3"
rand = "0.6.5"
csv = "1.0.7"
indicatif = "0.11.0"
ndarray = { version = "0.12.1"}
num-traits = "0.2"
log = "*"
pretty_env_logger = "0.3.0"
num_cpus = "1.10.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = true
